--- a/package.json
+++ b/package.json
@@ -17,6 +17,18 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.56.1",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.3.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.4",
+    "prettier": "^2.7.1"
   }
 }
