--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">18.0.0"
+    "node": "^18.18.2"
   },
   "dependencies": {
     "@types/node": "18.11.9",
